chore: AI code quality improvements via Claude